# cmake-app-template

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.c
